AMBARI-7989. Ambari layout issues in Add Service and Admin Repositories (alexantonenko)

--- a/ambari-web/app/styles/application.less
+++ b/ambari-web/app/styles/application.less
@@ -6460,7 +6460,7 @@ i.icon-asterisks {
             width: 70%;
             padding-top: 4px;
             padding-left: 3px;
-            overflow: scroll;
+            overflow: auto;
           }
           .edit-td {
             width: 8%;
